fix: Update spacing on header/actions on mobile

--- a/src/components/actions/index.scss
+++ b/src/components/actions/index.scss
@@ -12,9 +12,9 @@
   cursor: pointer;
   padding: 1rem;
   position: relative;
-  margin-right: 1rem;
-  &:last-of-type {
-    margin-right: 0;
+  margin-left: 1rem;
+  &:first-of-type {
+    margin-left: 0;
   }
   &--active {
     box-shadow: 0px 4px 0px -2px var(--focus-border);
